<resources>

    <!-- System Defined Strings -->
    <string name="app_name">eCounselling</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">eCounselling</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- User Defined Strings -->
    <!-- Main Navigation String -->
    <string name="test_dep">Depression Test</string>
    <string name="setting">Setting</string>
    <string name="help_line">Helpline</string>
    <string name="feedback">Feedback</string>
    <string name="more">More</string>
    <string name="help">Help</string>
    <string name="share">ShareApp</string>
    <string name="rate">Rate</string>
    <string name="about">About</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="user_manual">User Manual</string>
    <string name="t_and_a">Terms &amp; Conditions</string>
    <string name="line1">All the users of eCounselling application are expected to comply with the following terms and conditions\n\n
    \u25CF\tAcceptance of Terms and Conditions of Use Agreement.\nThis agreement is an electronic contract that establishes the legally
    binding terms you must accept to use the service.\nThis agreement includes the:\ni)\tThe Privacy Policy and\nii)\tour Safety Guidelines.\n
    By accessing or using the services, you accept this agreement and agree to the terms and conditions provided to you in electronic form.\n
    \u25CF\tEligibility.\nThe service is not intended for children under 13 years of age for a dating related services.\n
    \u25CF\tDo not share your personal details such as contact number, location etc.. to the strangers.\n
    \u25CF\tDo not give hints like dates.\n
    \u25CF\tTermination \-\nYou may disable your account at any time, for any reason, by following the instructions in \"Settings\" in the service.\n
    \u25CF\tAccount Security.\nYou are responsible for maintaining the confidentiality of username and password you designate during
    the registration process, and you are solely responsible for all activities that occur your username and password. If any
    unauthorized use of username and password, you can contact at the following emails ecounsellingbhutan2018@gmail.com and ensure that you
    log out from your account at the end of each session.\n
    \u25CF\tInteractions with other users.\nYou are solely responsible for your interaction with other users</string>

    <string-array name="termsa">
        <item>@string/line1</item>
        <item>Second line</item>
    </string-array>

    <string name="hospital">112</string>
    <string name="police">113</string>

    <!-- About Page String Resources -->
    <string name="app_logo">eCounselling app logo</string>
    <string name="contact_details">For queries, find us at</string>
    <string name="email_address">ecounsellingbhutan2018@gmail.com</string>
    <string name="devTitle">Developers</string>
    <string name="guide_img">Guide Image</string>
    <string name="dev_img">Developer Image</string>
    <string name="guide_details_1">Kezang Dema</string>
    <string name="guide_details_2">Project Guide</string>
    <string name="dev_name_1">Doten Dorji</string>
    <string name="dev_name_2">Galley Namgyel</string>
    <string name="dev_name_3">Khusant Chhetri</string>
    <string name="dev_name_4">Sonam Dema</string>
    <string name="dev_email_1">dotendorji@gmail.com</string>
    <string name="dev_email_2">galley@gmail.com</string>
    <string name="dev_email_3">khushwanth.chhetri@gmail.com</string>
    <string name="dev_email_4">sonamdema@gmail.com</string>

    <!--Feedback-->
    <string name="feedbackInfo">Please provide your feedback</string>
    <string name="enter_feedback">Enter your feedback here</string>
    <string name="feedbackAno">Your feedback is anonymous</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--DepressionTest-->
    <string name="dep_test">MhGAP DepressionTest</string>
    <string name="dep_testInfo">Mental Health Gap Action Programme (mhGAP) aims at scaling up services for mental, neurological and substance use disorders for countries especially with low- and middle-income. \n\n
        The programme asserts that with proper care, psychosocial assistance and medication, tens of millions could be treated for depression, schizophrenia, and epilepsy, prevented from suicide and begin to lead normal lives– even where resources are scarce. \n\n
        One of the main pyschological problem is depression. And in this section, you can test yourself as a series of questions will be asked. \n
    </string>
    <string name="test_button">Begin Test</string>
    <string name="mhgap_logo">mhGAP Logo</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="loginheading">eCounselling\nAnonymous Chat</string>


    <!--Registration-->
    <string name="register">Register</string>
    <string name="name">Enter your name</string>
    <string name="userName">Enter your username</string>
    <string name="passwd">Enter your password</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="languages">Languages</string>
    <string name="english">English</string>
    <string name="dzongkha">Dzongkha</string>
    <string name="lhotsham">Lhotshamkha</string>
    <string name="sharchop">Sharchop</string>
    <string name="choose">Register as</string>
    <string name="counsellor">Counsellor</string>
    <string name="counselee">Counselee</string>
    <string name="next">Next</string>

    <!--Registration two-->
    <string name="contact">Contact Number</string>
    <string name="dob">Date of Birth</string>
    <string name="finishButton">Finish</string>

    <!-- Depression Test Strings -->
    <string name="test_inst_topic">
        COMMON PRESENTATIONS OF DEPRESSION
    </string>
    <string name="test_inst">
        \u25CF\tMultiple persistent physical symptoms with no clear cause\n\u25CF\tLow energy, fatigue, sleep problems\n\u25CF\tPersistent sadness or depressed mood, anxiety\n\u25CF\tLoss of interest in activities that are normally pleasurable
    </string>
    <string name="dep_test_inst">Instruction: \nYou will be displayed a question along with the additional symptoms. You will have to Select the Yes or No option, and based on that, the next question, or the result will be displayed.</string>
    <string name="start">Start</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Quiz questions -->
    <string name="question1">Has the person had at least one of the following symptoms for the last 2 weeks?</string>
    <string name="symptoms1">- Persistent Depressed mood\n- Markedly diminished interest in or pleasure from activities</string>
    <string name="question2">Has the person had several of the following additional symptoms for at least 2 weeks?</string>
    <string name="symptoms2">- Disturbed sleep or sleeping too much\n- Significant change is appetite or weight\n- Beliefs of worthlessness or excessive guilt\n- Fatigue or loss of energy\n- Reduced concentration\n- Indecisiveness\n- Observable agitation or physical restlessness\n- Talking or moving more slowly than usual\n- Hopelessness\n- Suicidal thoughts or acts</string>
    <string name="question3">Does the person have considerable difficulty with daily functioning in personal, family, social, educational, occupational or other areas?</string>
    <string name="symptoms3">A person with depression may have psychotic symptoms such as delusions or hallucinations. If present, treatment for depression needs to be adapted. CONSULT A SPECIALIST.</string>
    <string name="no_dep">Depression is Unlikely</string>
    <string name="depression">Depression is very likely.</string>
    <string name="exit">Exit</string>
    <string name="search">Search</string>

</resources>
