<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_test"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/test_dep" />
        <item
            android:id="@+id/nav_helpline"
            android:icon="@android:drawable/ic_menu_call"
            android:title="@string/help_line" />
        <item
            android:id="@+id/nav_sett"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/setting" />

        <item
            android:id="@+id/nav_feed"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/feedback" />

    </group>

    <item android:title="@string/more">
        <menu>

            <item
                android:id="@+id/nav_help"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/help" />
            <item
                android:id="@+id/nav_share"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/rate" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
