<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About">

    <ScrollView
        android:id="@+id/aboutScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/fab_margin">


            <ImageView
                android:id="@+id/about_app_logo"
                android:contentDescription="@string/app_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/cutmypic" />

            <TextView
                android:id="@+id/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp"
                android:gravity="center"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/version_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text=""
                android:textSize="20sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/contact_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/contact_details"
                android:textSize="20sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="@string/email_address"
                android:autoLink="email"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="20sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/dev_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/devTitle"
                android:autoLink="email"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="23sp"
                android:gravity="start"/>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_marginTop="@dimen/fab_margin"
                android:contentDescription="@string/guide_img"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/guide" />

            <TextView
                android:id="@+id/guide_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="@string/guide_details_1"
                android:textSize="15sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/guide_info_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="@string/guide_details_2"
                android:textSize="15sp"
                android:gravity="center"/>


        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>