<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DepressionTest">

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                android:layout_width="100dp"
                android:contentDescription="@string/mhgap_logo"
                android:layout_height="90dp"
                app:srcCompat="@drawable/mhgap_logo" />

            <TextView
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/dep_test"
                android:textAlignment="center"
                android:textSize="23sp"
                android:textColorHint="@color/mhgapColor"/>

            <TextView
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/dep_testInfo"
                android:textSize="20sp"
                android:textColorHint="@color/mhgapContentColor"/>

            <Button
                android:id="@+id/button"
                android:layout_width="100dp"
                android:layout_height="97dp"
                android:text="@string/test_button"/>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>