<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DepressionAssesment"
    android:background="@color/dep_color">

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/fab_margin">


            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_inst_topic"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginBottom="2dp"
                android:textSize="@dimen/text_size"/>

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_inst"
                android:textColor="@android:color/white"
                android:gravity="left"
                android:padding="10dp"
                android:textSize="18sp"
                android:background="@drawable/text_border"/>

            <TextView
                android:id="@+id/textView16"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_small"
                android:layout_height="wrap_content"
                android:text="@string/dep_test_inst" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:textSize="23sp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="@color/dep_color"/>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>