<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Quiz">

    <ScrollView
        android:id="@+id/scrollView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/fab_margin">

            <TextView
                android:id="@+id/ques"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question1"
                android:textColor="@color/dep_color"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/symp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/symptoms1"
                android:background="@drawable/text_border_dep"
                android:textColor="@color/dep_color"
                android:textSize="@dimen/text_size_small"
                android:padding="10dp"
                android:layout_marginTop="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/fab_margin">

                <Button
                    android:id="@+id/yesbut"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yes"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size"
                    android:background="@color/dep_color"
                    android:layout_marginRight="@dimen/fab_margin"
                    android:onClick="yesClick"/>

                <Button
                    android:id="@+id/nobut"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size"
                    android:background="@color/dep_color"
                    android:textAllCaps="false"
                    android:onClick="noClick"/>
            </LinearLayout>

            <Button
                android:layout_gravity="center"
                android:id="@+id/exitbut"
                android:visibility="gone"
                android:layout_width="100dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/exit"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="@dimen/text_size"
                android:background="@color/dep_color"
                android:textAllCaps="false"
                android:onClick="exitToMain"/>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>